--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             </li>
                             <li>
                                 <div class="bg-white text-black rounded-xl dark:bg-gray-800 ">
-                                    <a href="https://codebyamrit.github.io/resume/light-theme.html"
+                                    <a href="https://codebyamrit.github.io/profile.html"
                                         class="block py-1 px-4 rounded-xl hover:bg-blue-100 dark:hover:bg-gray-600 dark:text-white">
                                         Resume
                                     </a>
