porofile and old pages

--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
           >
           |
           <a
-            href="www.linkedin.com/in/amrit-sharma-b11b88124"
+            href="https://linkedin.com/in/amrit-sharma-b11b88124"
             target="_blank"
             class="hover:underline mx-2"
             >LinkedIn</a
