--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Amrit Sharma - Full Stack Developer" />
   <meta name="twitter:image" content="https://codebyamrit.co.in/images/logoMain.png" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+   <link rel="stylesheet" href="./css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
