--- a/index.html
+++ b/index.html
@@ -212,12 +212,9 @@
         <div class="md:col-span-3 anim-up">
           <h3 class=" text-2xl text-white">Who I Am</h3>
           <p class="mt-4 text-gray-300">
-            I am a dedicated and passionate developer with a strong foundation
-            in both front-end and back-end technologies. My journey started
-            with a diploma in Computer Engineering and is now advancing with a
-            B.Tech in AI & ML. I thrive on solving complex problems and am
-            constantly exploring new technologies to build better, more
-            efficient digital solutions.
+            I am a Full Stack Developer with a strong foundation in modern web technologies and AI. 
+            My journey began with a Diploma in Computer Engineering and continues as I pursue a B.Tech in AI & ML. 
+            I thrive on solving complex problems, constantly exploring new stacks to build efficient, scalable, and user-centric digital solutions.
           </p>
         </div>
         <div class="md:col-span-3">
@@ -396,7 +393,7 @@
           <div class="absolute inset-0 flex flex-col justify-end p-6 translate-y-[45%] group-hover:translate-y-0 transition-transform duration-300 ease-out">
             <h3 class="text-xl font-bold text-white mb-1">Cloud File Manager</h3>
             <p class="text-sm text-gray-300 mb-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300 delay-75 line-clamp-2">
-               A desktop application for file management systems designed for schools and colleges.
+               A web application for file management systems designed for schools and colleges.
             </p>
             <div class="flex flex-wrap gap-2 mb-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300 delay-100">
               <span class="text-[10px] uppercase tracking-wider bg-[#6366f1]/20 border border-[#6366f1]/50 text-[#a5b4fc] px-2 py-1 rounded">Next.js</span>
